# pdresume

./: README.md  pyproject.toml
profiles/awetex/: context.toml
profiles/awetxt/: context.toml
src/zu/pdresume/: __main__.py  utils.py
